Init header - fix storybook config - add layout base - styles: add btns, spacing

--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -19,11 +19,11 @@ $colors: (
 
 @each $colorName,
 $color in $colors {
-    .color--#{$colorName} {
+    .color-#{$colorName} {
         color: $color;
     }
 
-    .bg--#{$colorName} {
+    .bg-#{$colorName} {
         background-color: $color;
     }
 }
